--- a/styles/login.css
+++ b/styles/login.css
@@ -91,12 +91,47 @@ body {
   box-shadow: none;
   outline: none;
 }
-.login .inputBx input[type="submit"] {
+.login .inputBx input[type="submit"]   {
   width: 100%;
   background: #0078ff;
   background: linear-gradient(45deg, #ff357a, #fff172);
   border: none;
   cursor: pointer;
+
+}
+
+.login .inputBx-submit{
+  position: relative;
+  width: 100%;
+  padding: 12px 20px;
+  background: transparent;
+  border: 2px solid #fff;
+  border-radius: 40px;
+  font-size: 1.2em;
+  color: #fff;
+  box-shadow: none;
+  outline: none;
+  width: 100%;
+  background: #0078ff;
+  background: linear-gradient(45deg, #ff357a, #fff172);
+  border: none;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+
+}
+
+
+.login .inputBx-submit:hover {
+  background: transparent;
+  color: #0078ff;
+  box-shadow: 0 0 25px #fec1958c;
+  
+}
+
+.login .inputBx input[type="submit"]:hover{
+  background: transparent;
+  color: var(--color);
+  box-shadow: 0 0 25px #fec1958c;
 }
 .login .inputBx input::placeholder {
   color: rgba(255, 255, 255, 0.75);
